[gd_scene load_steps=15 format=3 uid="uid://dyhaxeflnkmln"]

[ext_resource type="Script" uid="uid://br2vknu1o14p8" path="res://Scripts/Ship/Ship.gd" id="1_1l6c1"]
[ext_resource type="Texture2D" uid="uid://c24541cla84fj" path="res://Assets/Sprites/Ship.png" id="1_f4yyi"]
[ext_resource type="Texture2D" uid="uid://c0hr88pmffrkx" path="res://Assets/Sprites/RoundShadow.png" id="3_r5v3t"]
[ext_resource type="Script" uid="uid://cq5figb4s3vih" path="res://Scripts/Player/ScreenShake.gd" id="4_wtp3e"]
[ext_resource type="Texture2D" uid="uid://cqavx876fgh5s" path="res://Assets/Sprites/WhiteSprites.png" id="5_8i8wl"]
[ext_resource type="Script" uid="uid://bqgxhf03v15b8" path="res://Scripts/UI/BlackScreen.gd" id="6_k5r1i"]

[sub_resource type="Animation" id="Animation_1l6c1"]
resource_name = "Appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [25, 24, 23, 22, 21]
}

[sub_resource type="Animation" id="Animation_wtp3e"]
resource_name = "IdleInvisible"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_f4yyi"]
resource_name = "IdleVisible"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_1q6u4"]
resource_name = "Liftoff"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.23333, 3.43333, 3.63333, 3.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20, 13, 14, 15, 16, 17, 18, 19, 20, 13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 1.2, 1.6, 2, 2.4, 2.8, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -50), Vector2(0, -100), Vector2(0, -50), Vector2(0, -100), Vector2(0, -50), Vector2(0, -2000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.8, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.8, 0.15), Vector2(2, 0.15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.8, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r5v3t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shadow:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wtp3e"]
_data = {
&"Appear": SubResource("Animation_1l6c1"),
&"IdleInvisible": SubResource("Animation_wtp3e"),
&"IdleVisible": SubResource("Animation_f4yyi"),
&"Liftoff": SubResource("Animation_1q6u4"),
&"RESET": SubResource("Animation_r5v3t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x1hxw"]
radius = 350.0

[sub_resource type="CircleShape2D" id="CircleShape2D_f4yyi"]
radius = 100.0

[node name="Ship" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_1l6c1")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, 70)
scale = Vector2(0.8, 0.15)
texture = ExtResource("3_r5v3t")

[node name="ShipSprite" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_f4yyi")
hframes = 13
vframes = 2
frame = 25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wtp3e")
}

[node name="ShipVisibleArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipVisibleArea"]
shape = SubResource("CircleShape2D_x1hxw")

[node name="ShipInteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipInteractionArea"]
shape = SubResource("CircleShape2D_f4yyi")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -200)
enabled = false
zoom = Vector2(0.6, 0.6)
script = ExtResource("4_wtp3e")

[node name="BlackScreen" type="TextureRect" parent="."]
process_mode = 3
modulate = Color(0, 0, 0, 0)
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1334.0
offset_top = -1334.0
offset_right = 1334.0
offset_bottom = 1334.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_8i8wl")
script = ExtResource("6_k5r1i")

[connection signal="body_entered" from="ShipVisibleArea" to="." method="_on_ship_visible_area_body_entered"]
[connection signal="body_exited" from="ShipVisibleArea" to="." method="_on_ship_visible_area_body_exited"]
[connection signal="body_entered" from="ShipInteractionArea" to="." method="_on_ship_interaction_area_body_entered"]
[connection signal="body_exited" from="ShipInteractionArea" to="." method="_on_ship_interaction_area_body_exited"]
